modules/sandbox/ext/libriscv/examples/webapi/cpp-httplib/modules/gdscript/tests/scripts/analyzer/errors/assign_named_enum.gd
enum NamedEnum { V }
func test():
	NamedEnum.V = 1
